Einstellungen  hinzugefügt, confirm dialog mit bootstrap-vue umgesetzt

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 $primary: #014B94;
+$success: rgb(81, 174, 49);
+$warning: rgb(243, 146, 0);
+$danger: rgb(212, 15, 20);
 
 $breakpoint-mobile: 992px;
 ::selection {
