Custom Reload on Pull

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ $breakpoint-mobile: 992px;
 
 html body {
   background-color: $primary !important;
+  overscroll-behavior-y: none;
 }
 
 ::-webkit-scrollbar {
