--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ $primary_light: #0072d4;
 $success: rgb(81, 174, 49);
 $warning: rgb(243, 146, 0);
 $danger: rgb(212, 15, 20);
+$border-radius-scroll: 8px;
 
 $breakpoint-mobile: 992px;
 ::selection {
@@ -12,42 +13,52 @@ $breakpoint-mobile: 992px;
 html body {
   background-color: $primary !important;
   overscroll-behavior-y: none;
-}
 
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  /*box-shadow: inset 0 0 5px darkgray;*/
-  /*border-radius: 10px;*/
-  background-color: $primary;
-  //border-bottom: solid 55px white;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: lightgrey;
-  //border-bottom: solid 55px rgba(0, 0, 0, 0);
-  /*border-radius: 10px;*/
-}
-
-$border-radius-scroll: 8px;
-
-#view{
   /* Track */
   ::-webkit-scrollbar-track {
-    border-radius: $border-radius-scroll;
-    background-color: lightgrey;
+    border-radius: $border-radius-scroll !important;
+    background-color: white !important;
   }
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: $primary_light;
-    border-radius: $border-radius-scroll;
+    background: $primary_light !important;
+    border-radius: $border-radius-scroll !important;
   }
+
+  ///* Track */
+  //::-webkit-scrollbar-track {
+  //  background-color: $primary;
+  //}
+  //
+  ///* Handle */
+  //::-webkit-scrollbar-thumb {
+  //  background: lightgrey;
+  //}
+
+}
+
+.betterScroller {
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: $border-radius-scroll !important;
+    background-color: white !important;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: $primary_light !important;
+    border-radius: $border-radius-scroll !important;
+  }
+}
+
+#app * {
+  @extend .betterScroller;
 }
 
 .clickable {
